# moduly

./: .cursorrules  .dockerignore  .env.example  .gitattributes  .gitignore  APP_CREATION_LOG_ANALYSIS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREATE_APP_IMPLEMENTATION_PLAN.md  CREATE_APP_IMPLEMENTATION_RESULT.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  moduly-bastion-key.pem  package-lock.json  requirements.txt  start.sh  start_msa.sh  test.sh
apps/gateway/: __init__.py  lifespan.py  main.py  pyproject.toml  requirements.txt
apps/gateway/api/: api.py  deps.py
apps/gateway/api/v1/: router.py
apps/gateway/auth/: __init__.py  dependencies.py
apps/gateway/core/: config.py  security.py
apps/gateway/db/: seed.py
apps/gateway/gateway.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/gateway/services/: __init__.py  app_service.py  auth_service.py  code_wizard_service.py  deployment_service.py  docker_service.py  llm_service.py  prompt_wizard_service.py  retrieval.py  scheduler_service.py  storage.py  template_wizard_service.py  workflow_service.py
apps/gateway/services/ingestion/: __init__.py  factory.py  service.py
apps/gateway/services/llm_client/: __init__.py  anthropic_client.py  base.py  google_client.py  openai_client.py
apps/gateway/services/wizard/: __init__.py  base.py  code_gen.py  prompt_imp.py  template_imp.py
apps/gateway/static/: widget.js
apps/gateway/tasks/: ingestion.py
apps/gateway/tests/api/: test_webhook_api.py
apps/gateway/tests/load/: locustfile.py
apps/gateway/tests/manual/: debug_pdf_parser.py  test_header_encryption.py
apps/gateway/tests/services/: test_answer_node.py  test_docker_service.py  test_knowledge_service.py  test_llm_client_openai.py  test_parsing_cache.py  test_start_node.py  test_workflow_error_cases.py  test_workflow_node.py
apps/gateway/tests/stress/: test_concurrency.py
apps/gateway/tests/tasks/: test_ingestion_task.py
apps/gateway/utils/: encryption.py  template_utils.py
apps/log-system/: __init__.py  lifespan.py  main.py  pyproject.toml  requirements.txt  worker.py
apps/log-system/log_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/log-system/services/: log_service.py
apps/log-system/tasks/: log_tasks.py
apps/log_system/: __init__.py  main.py  pyproject.toml  tasks.py
apps/log_system/api/v1/: router.py
apps/log_system/tasks/: __init__.py
apps/sandbox/: __init__.py  config.py  main.py  pyproject.toml  requirements.txt
apps/sandbox/api/: __init__.py
apps/sandbox/api/v1/: __init__.py
apps/sandbox/core/: __init__.py  bucket.py  executor.py  history.py  scheduler.py
apps/sandbox/models/: __init__.py  job.py  result.py
apps/sandbox/nsjail/: __init__.py  sandbox.cfg  wrapper.py
apps/sandbox/tests/: __init__.py  test_scheduler.py
apps/shared/: __init__.py  celery_app.py  distributed_lock.py  pubsub.py  pyproject.toml
apps/shared/alembic/: env.py
apps/shared/alembic/versions/: 2a28cca99a72_merge_multiple_heads.py  3d4d4f13ff35_initial_migration_with_all_tables.py  409c2280a1e9_deployment_타입에_schedule_추가.py  4755334ea58d_parsing_registry_table_created.py  69181176c936_add_indexes_to_user_id_and_knowledge_.py  a1b2c3d4e5f6_update_parsing_registry_pk.py  c35b8a436a9e_add_webhook_to_deploymenttype_enum.py  d4e5f6g7h8i9_add_trigger_modes_to_enum.py  e4956fcd7e2b_legacy_테이블_제거.py
apps/shared/celery_app/: __init__.py  config.py
apps/shared/connectors/: base.py  postgres.py
apps/shared/db/: __init__.py  base.py  seed.py  session.py
apps/shared/db/models/: __init__.py  app.py  connection.py  knowledge.py  llm.py  schedule.py  user.py  workflow.py  workflow_deployment.py  workflow_run.py
apps/shared/moduly_shared.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/shared/redis/: __init__.py  pubsub.py
apps/shared/schemas/: __init__.py  app.py  auth.py  connector_detail.py  deployment.py  llm.py  log.py  rag.py  workflow.py
apps/shared/services/: embedding_service.py
apps/shared/services/ingestion/: vector_store_service.py
apps/shared/services/llm_client/: __init__.py  anthropic_client.py  base.py  google_client.py  openai_client.py
apps/shared/shared.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/shared/shared/clients/: log_client.py
apps/shared/shared/db/: session.py
apps/shared/shared/schemas/: deployment.py  log.py
apps/shared/shared/services/: llm_service.py  retrieval_service.py
apps/shared/tests/integration/: test_vector_store_workflow.py
apps/shared/tests/manual/: debug_pdf_parser.py  test_header_encryption.py  verify_async_engine.py
apps/shared/tests/services/: test_vector_store_service.py
apps/shared/utils/: __init__.py  common.py  encryption.py  join_query_utils.py  log_helper.py  prompt_injection_guard.py
apps/workflow-engine/: __init__.py  lifespan.py  main.py  pyproject.toml  requirements.txt  worker.py
apps/workflow-engine/core/: edge.py  engine.py  log_worker_pool.py  workflow_engine.py  workflow_logger.py
apps/workflow-engine/engine_services/: execution_service.py
apps/workflow-engine/nodes/condition/: condition_node.py  entities.py
apps/workflow-engine/nodes/http/: __init__.py
apps/workflow-engine/nodes/llm/: entities.py  llm_node.py
apps/workflow-engine/nodes/loop/: loop_node.py
apps/workflow-engine/nodes/start/: start_node.py
apps/workflow-engine/nodes/template/: entities.py
apps/workflow-engine/nodes/webhook/: entities.py  webhook_node.py
apps/workflow-engine/tasks/: workflow_tasks.py
apps/workflow-engine/workflow_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/workflow_engine/: __init__.py  main.py  pyproject.toml  tasks.py
apps/workflow_engine/core/: workflow_node_factory.py
apps/workflow_engine/moduly_workflow_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/workflow_engine/services/: __init__.py  docker_service.py  llm_service.py  retrieval.py  sandbox_service.py  sync_service.py
apps/workflow_engine/tasks/: workflow_tasks.py
apps/workflow_engine/utils/: __init__.py
dev/: .dockerignore  (+2 more)
(+726 files in other folders)
