[project]
name = "moduly-gateway"
version = "0.1.0"
description = "Moduly API Gateway Service"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "moduly-shared",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# We only want to install dependencies, not the app itself as a library
packages = []
