[project]
name = "moduly-gateway"
version = "0.1.0"
description = "Moduly Gateway - API 게이트웨이 서비스"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "itsdangerous>=2.1.0",  # SessionMiddleware dependency
    # Celery 호출용
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    # Knowledge Base / Ingestion
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "pymupdf4llm",
    "python-docx",
    "openpyxl",
    "pandas",
    # Shared 패키지 의존성
    "moduly-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
