[project]
name = "moduly-gateway"
version = "0.1.0"
description = "Moduly Gateway - API 게이트웨이 서비스"
requires-python = "==3.11.*"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",  # BaseSettings
    "email-validator>=2.0.0",  # Pydantic email field support
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "itsdangerous>=2.1.0",  # SessionMiddleware dependency
    "cryptography>=41.0.0",  # Encryption (security.py)
    "boto3>=1.28.0",  # S3 storage
    "paramiko>=2.12.0,<3.0",  # SSH tunnel (DSSKey compatibility with sshtunnel) -> 나중에 수정하기
    "sshtunnel>=0.4.0",  # SSH tunnel for DB
    "authlib>=1.2.0",  # OAuth (Google login)
    # Celery 호출용
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    # Knowledge Base / Ingestion
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-text-splitters>=0.3.0",  # text_splitter module (separated in v0.3)
    "jinja2>=3.1.0",  # Template rendering for DB data
    "pymupdf4llm",
    "llama-parse==0.5.15",  # LlamaParse SDK (Pydantic v2 compatible version)
    "python-docx",
    "openpyxl",
    "pandas",
    # Shared 패키지 의존성
    "moduly-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
