[project]
name = "log-system"
version = "0.1.0"
description = "Log System Service for Moduly"
dependencies = [
    "fastapi",
    "uvicorn",
    "shared", # Local shared package
]

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
