[project]
name = "log-system"
version = "0.1.0"
description = "Log System Service for Moduly"
dependencies = [
    "fastapi",
    "uvicorn",
    "shared", # Local shared package
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
