[project]
name = "moduly-log-system"
version = "0.1.0"
description = "Moduly Log System Service"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "celery[redis]",
    "sqlalchemy",
    "email-validator",
    "moduly-shared",
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
