[project]
name = "moduly-log-system"
version = "0.1.0"
description = "Moduly Log System - 워크플로우 실행 로그 수집 및 저장 마이크로서비스"
requires-python = "==3.11.*"
dependencies = [
    "celery>=5.3.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "I"]
ignore = ["E501", "W292"]
