[project]
name = "moduly-shared"
version = "0.1.0"
description = "Moduly 마이크로서비스 공유 패키지 (DB 모델, 스키마, Celery 설정)"
requires-python = "==3.11.*"
dependencies = [
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "pgvector==0.4.2",
    "python-dotenv>=1.0.0",
    "alembic>=1.12.0",  # Database migration
    "nltk==3.9.2",
    "tiktoken==0.12.0",
    "cryptography==46.0.3",
    "langchain-text-splitters==1.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["db*", "schemas*", "shared*"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "I"]
ignore = ["E501", "W292"]
