[project]
name = "moduly-workflow-engine"
version = "0.1.0"
description = "Moduly Workflow Engine Service"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "langchain",
    "langchain-core",
    "langchain-openai",
    "email-validator",
    "moduly-shared",
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
