[project]
name = "moduly-workflow-engine"
version = "0.1.0"
description = "Moduly Workflow Engine - 워크플로우 실행 서비스"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.3.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "litellm>=1.50.0",
    "google-genai>=1.0.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
