[project]
name = "moduly-workflow-engine"
version = "0.1.0"
description = "Moduly Workflow Engine - 워크플로우 실행 서비스"
requires-python = "==3.11.*"
dependencies = [
    "celery>=5.3.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",  # HTTP 요청 (파일 다운로드, LLM API 호출)
    "litellm>=1.50.0",
    "google-genai>=1.0.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "pymupdf4llm>=0.0.5",  # PDF 텍스트 추출
    "gidgethub>=5.0.0",  # GitHub API 비동기 통합
    "gevent>=24.2.0",  # [NEW] Celery gevent pool for async I/O
    # [SY] 외부 DB SSH 터널 동기화용
    "paramiko>=2.12.0,<3.0",
    "sshtunnel>=0.4.0,<0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
